# docassemble-MLHStatutoryWill

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: word_diff.yml
docassemble/MLHStatutoryWill/data/questions/: MichiganStatutoryWill.yml
docassemble/MLHStatutoryWill/data/templates/: michigan_statutory_will.docx  michigan_statutory_will_instructions.docx
docassemble/MichiganStatutoryWill/data/questions/: MichiganStatutoryWill.yml
docassemble/MichiganStatutoryWill/data/templates/: michigan_statutory_will.docx  michigan_statutory_will_instructions.docx
